--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
              <h2>Calculator</h2>
          </div>
 
-         <div class="displayboard">
-             <div class="result">
-
+         <div class="result">
+             <div class="history">
+                <p class="upper-value"></p>
              </div>
 
-             <div class="input">
-
+             <div class="output">
+                <p class="lower-value"></p>
              </div>
          </div>
 
@@ -77,6 +77,8 @@
 
             
      </div>
+
+    <script src="javascript.js"></script>
 
 </body>
 </html>
